# hyperkvasir-multi-cnn-fusion

./: .gitignore  AGENTS.md  README.md  project_plan.md  project_structure.md  pyproject.toml  rapor_duzeltme_plani.md
colab/: README.md  runner.ipynb
configs/: experiment_matrix.yaml
configs/dataset/: hyperkvasir_23class_official.yaml
configs/method/: pair_m_e_concat.yaml  pair_r_e_concat.yaml  pair_r_m_concat.yaml  single_efficientnetb0.yaml  single_mobilenetv2.yaml  single_resnet50.yaml  triple_concat.yaml  triple_gmu.yaml  triple_weighted.yaml
configs/training/: finetune_narrow.yaml  (+4 more)
docs/: FINAL_MODEL.md  decisions.md  environment.md  experiment_log.md  known_issues.md  results_progress.md  school_assignment.md
env/: environment.yml  pip-freeze.txt  requirements-colab.txt
references/: INDEX.md
scripts/: aggregate_cv.py  analyze_frozen_model.py  check_provenance.py  collect_outputs.py  compute_ci.py  compute_extra_metrics.py  ensemble_seeds.py  evaluate.py  extract_features.py  generate_report_tables.py  make_cv_schematic.py  make_data_samples.py  make_report_figures.py  make_splits.py  plot_results.py  prepare_data.py  run_cv.py  run_experiment_matrix.py  train.py  write_resolved_config.py
src/: __init__.py
tests/: test_augmentation.py  test_backbones.py  test_colab_runner_tools.py  test_data_splits.py  test_ema.py  test_ensemble.py  test_feature_cache.py  test_finetune_trainer.py  test_focal_loss.py  test_frozen_head.py  test_fusion_modules.py  test_gmu.py  test_llrd.py  test_metrics.py  test_smoke_train.py  test_statistical.py  test_tta.py
(+321 files in other folders)
