[project]
name = "multi-cnn-fusion"
version = "0.1.0"
requires-python = "==3.11.*"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "pyyaml>=6.0",
    "tqdm>=4.66",
    "albumentations>=1.4",
    "grad-cam>=1.5",
    "umap-learn>=0.5",
    "timm>=1.0",
    "mlflow>=2.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu132" }
torchvision = { index = "pytorch-cu132" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "ipykernel>=6.0",
]

[tool.uv]
package = false

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true
